--- a/搜狗拼音安装记.md
+++ b/搜狗拼音安装记.md
@@ -3,5 +3,6 @@
 # 2.使用`sudo dpkg -i xxx.deb`安装
   ## 首先出现缺失依赖错误
      通过`sudo apt install -f`修复
-  ## 然后出现`No such key ‘Gtk/IMModule’ in schema‘org.gnome.settings-daemon.plugins.xsettings’ as specified in o`
-     [通过csdn一位大佬给出的修改文件重打包操作搞定](https://blog.csdn.net/weixin_41123761/article/details/78753487)
+  ## 然后出现
+  `No such key ‘Gtk/IMModule’ in schema‘org.gnome.settings-daemon.plugins.xsettings’ as specified in o`<br>
+   [通过csdn一位大佬给出的修改文件重打包操作搞定](https://blog.csdn.net/weixin_41123761/article/details/78753487)
